# UNSWHighSchoolComputing

./: .gitignore  README.md  UNSWHighSchoolComputing.sln
Assignment/: Assignment.vcxproj  Assignment.vcxproj.filters  main.c  slide.c  slide.h
AssignmentA/: slide.c  slide.h
AssignmentB/: AssignmentB.vcxproj  AssignmentB.vcxproj.filters  README.txt  main.c  order.c  order.h  pizzeria.h  utils.c  utils.h
AssignmentB2/: AssignmentB2.vcxproj  AssignmentB2.vcxproj.filters  CMakeLists.txt  README.txt  config.h  config.h.in  ingredient.c  ingredient.h  main.c  main.h  order.c  order.h  pizzeria.c  pizzeria.h  utils.c  utils.h
Exam/: Exam.vcxproj  Exam.vcxproj.filters  mean_.c  sample_.c  sort.c
ExamA/: ExamA.vcxproj  mean_.c  sample_.c  sort.c  stdev_.c
ExamB1/: ExamB1.vcxproj  ExamB1.vcxproj.filters  q1.cpp  q2.c  q3.c  q4.c  q6.c  q8.c
ExamB2/: ExamB2.cpp  ExamB2.vcxproj  ExamB2.vcxproj.filters  bytes.c  rot13.c  vector.c
Week 5/: Week 5.vcxproj  Week 5.vcxproj.filters  fibonacci.c  numbers.c  sub.c
Week2/: Week2.vcxproj  Week2.vcxproj.filters  lab1.c  main.c
Week3/: Week3.vcxproj  Week3.vcxproj.filters  addition.c  asker.h  dice_range.c  is_leap_year.c  main.c  slide.c
Week4/: Week4.vcxproj  Week4.vcxproj.filters  grid.c
WeekA2/: WeekA2.vcxproj.filters  lab1.c  lab3.c  lab3.h  main.c
WeekA3/: addition.c  addition.h  asker.c  dice_range.c  dice_range.h  is_leap_year.c  lab1.c  main.c
WeekA4/: factorial.c  factorial.h  grid.c  main.c  numbers.c
WeekA5/: fibonacci.c  numbers.c  sub.c
WeekB2/: WeekB2.vcxproj  WeekB2.vcxproj.filters  bitsbytes.c  (+7 more)
(+13 files in other folders)
